<resources>


    <string name="prefs_file"> prefs_file_key</string>
    <string name="default_web_client_id">1038355507865-mrininmus8c5h81c2ct3pd9ns0li8mbl.apps.googleusercontent.com</string>
    <string name="firebase_database_url">https://buyacoffe-ea2cb-default-rtdb.europe-west1.firebasedatabase.app</string>


    <string name="app_name">BuyABeer</string>
    <string name="google">Google</string>
    <string name="acceder">Acceder</string>
    <string name="registrar">Registrar</string>
    <string name="beer">Tú Cerveza Favorita</string>
    <string name="getStarted">Get Started</string>
    <string name="todo">TODO</string>
    <string name="categorias">Categorias</string>
    <string name="m_s_populares">Más Populares</string>
    <string name="ver_todos">Ver Todos</string>
    <string name="explorer">Explorer</string>
    <string name="cesta">Cesta</string>
    <string name="pedido">Pedido</string>
    <string name="back">Back</string>
    <string name="Tamaño">Tamaño</string>
    <string name="quinto_1_5">Quinto (1/5)</string>
    <string name="tercio_1_3">Tercio (1/3)</string>
    <string name="_1_2_l_jarra">1/2 L (Lata)</string>
    <string name="cantidad">Cantidad</string>
    <string name="menos"> - </string>
    <string name="mas">+</string>
    <string name="_1">1</string>
    <string name="descripc_n">Descripción</string>
    <string name="a_adir_a_la_cesta">Añadir a la cesta</string>
    <string name="euro"> € </string>
    <string name="list">List</string>
    <string name="populares">Populares</string>
    <string name="productos">Productos</string>
    <string name="tu_pedido">Tu pedido:</string>
    <string name="itemrandom">itemRandom</string>
    <string name="realizar_pedido">Realizar Pedido</string>
    <string name="descuento">Descuento</string>
    <string name="aplicar">Aplicar</string>
    <string name="signoeuro">€</string>
    <string name="sub_total">Sub Total</string>
    <string name="total_iva">Total IVA</string>
    <string name="total">TOTAL</string>
    <string name="ultimo_pedido_realizado">Ultimo pedido realizado</string>
    <string name="pedido_completado">pedidocompl</string>

</resources>